# pf-rates

./: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: deploy.yml
alembic/: env.py
db/: 01_schema.sql  02_seed_currencies.sql
scripts/: adminer.sh  db.sh  local_stack.sh  runtime.sh
src/financial_data/: __init__.py  config.py
src/financial_data/application/: __init__.py  dto.py  errors.py
src/financial_data/application/ports/: __init__.py  market_data_repository.py  rate_provider.py  reference_data_repository.py
src/financial_data/application/services/: normalization.py
src/financial_data/application/use_cases/: get_exchange_rate_value.py  refresh_rates.py  (+2 more)
src/financial_data/domain/: __init__.py  currency.py  economic_index.py  exchange_rate.py  income_tax_bracket.py  normalization.py  quantizers.py
src/financial_data/infrastructure/: __init__.py
src/financial_data/shared/: constants.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_market_data_api.py
tests/unit/: __init__.py
tests/unit/application/: test_get_exchange_rate_value.py  test_normalization.py  test_refresh_income_tax_brackets.py  test_refresh_rates.py  test_sync_recent_market_data.py
tests/unit/domain/: test_currency.py  test_economic_index.py  test_exchange_rate.py  test_income_tax_bracket.py  test_quantizers.py
tests/unit/infrastructure/: test_rate_providers.py
tests/unit/interfaces/: __init__.py  test_app.py  test_routes.py  test_security.py
(+18 files in other folders)
