[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pf-rates"
version = "0.1.0"
description = "Chilean financial reference data microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30",
  "fastapi>=0.116",
  "greenlet>=3.2",
  "pydantic>=2.11",
  "pydantic-settings>=2.10",
  "sqlalchemy>=2.0.36",
  "structlog>=25.4",
  "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "mypy>=1.18",
  "pytest>=8.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6.2",
  "ruff>=0.12",
  "testcontainers[postgres]>=4.12",
  "vulture>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "strict"


[tool.ruff.lint]
extend-select = ["D", "E", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.12"

[tool.vulture]
paths = ["src"]
min_confidence = 80
sort_by_size = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
